update java home q

--- a/_posts/2018-12-04-java-home.md
+++ b/_posts/2018-12-04-java-home.md
@@ -5,13 +5,20 @@ categories: Datacollector
 author: John Cronin
 meta: Appservers
 ---
-By default transformation advisor data collector tool will use the java defined in path.
-If you want to use a specific JRE for the data collector tool,  you can include -java-home option in the command.
+By default, transformation advisor data collector tool will automatically determine which Java to use based on the following rules:
+1. If collecting from WebSphere Application Server, use the Java that is installed with WebSphere Application Server
+2. Use the Java that is on the path
+3. Use the Java that is shipped with the data collector  
+
+If you want to use a specific JRE for the data collector tool, you can include --java-home option in the command. This option will override the scheme outlined above.
 Here is an example:
 
 {% highlight ruby %}
-./bin/transformationadvisor -java-home /opt/ibm/java-x86_64-80 
+./bin/transformationadvisor --java-home /opt/ibm/java-x86_64-80 
 -w /opt/IBM/WebSphere/AppServer/ 
 -p AppSrv01 admin admin
 {% endhighlight %}
+
+*Note:* If you are collecting data from IBM MQ, the version of Java shipped with the data collector will always be used.
+ 
 
