--- a/news/1.9.4_README.md
+++ b/news/1.9.4_README.md
@@ -1,3 +1,8 @@
+---
+layout: page
+title: TA 1.9.4 README
+---
+
 # IBM CLOUD TRANSFORMATION ADVISOR
 
 Useful videos can be found [here](https://transformationadvisor.github.io/video/).
