--- a/_posts/2016-10-16-cookie.md
+++ b/_posts/2016-10-16-cookie.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Authentication endpoint is broken at the moment
-categories: KnownIssues
+categories: Known_Issues
 ---
 
 When running Transformation Advisor on Red Hat OCP, it works but after I leave it for a while and come back to it I get the message :
